[package]
name = "mips_parser"
version = "0.1.0"
authors = ["Eric Cao <eric7252000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
enum_derive = "0.1.7"
maplit = "1.0.2"
lazy_static = "1.4.0"